# prompting

./: .gitignore  pylintrc.toml  pyproject.toml
src/agents/: core.py  openai.py
src/core/: slurm.py
