[tool.poetry]
name = "prompting"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.2.3"
openai = "^1.55.0"
more-itertools = "^10.5.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"
pre-commit = "^4.0.1"
mypy = "^1.13.0"
pylint = "^3.3.1"
pandas-stubs = "^2.2.3.241009"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
